# mathvm

./: .gitignore  CMakeLists.txt  Intro.md  MVMLanguage.md  Makefile  Makefile.student  ProjectHome.md  README.md  README.txt  common.mk  main.cpp  vz5wg4gx.nwn.txt
include/: ast.h  ast_printer.cpp  ast_printer.h  main.cpp  mathvm.h
libs/AsmJit/: AssemblerX86X64.h  Platform.cpp
libs/asmjit/: AssemblerX86X64.cpp
libs/asmjit/x86/: x86compilercontext.cpp
students/2011/Alexandr.Mikhajlov/: ByteCodeGenerator.cpp  ByteCodeGenerator.h  FirstPassVisitor.cpp  FirstPassVisitor.h  GeneratorCommon.cpp  Makefile  MyInterpreter.cpp  MyInterpreter.h  NativeGenerator.cpp  NativeGenerator.h  main.cpp  mathvm.sln  mathvm.vcxproj
students/2011/Pavel.Sinay/: fasttest.sh  runclean.sh  test.sh  todo.txt
students/2012/ivanovak/: README
students/2012/krinkin/: Makefile  common.mk  main.cpp  pretty.cpp  pretty.h
students/2012/kudinkin/: Makefile  bcg.cpp  bci.cpp  bda.cpp  common.mk  main.cpp
students/2012/lepenkin/: Makefile
students/2013/storozhev/: README
students/2014/ovchinnikov/: Makefile  astprinter.hpp  blockscope.cpp  bytecodeinterpreter.cpp  bytecodeinterpreter.hpp  bytecodetranslator.cpp  bytecodetranslator.hpp  main.cpp  translatorfactory.cpp
students/2014/turaev.m/: README
students/2016/abramov/: Makefile  translator_impl.cpp
students/2016/baidin/: BytecodeInterpreter.cpp  BytecodeInterpreter.h  BytecodeTranslator.cpp  BytecodeTranslator.h  Makefile  main.cpp
students/2016/bibaev/: Makefile  main.cpp  printer.h
students/2016/charkin/: Makefile
students/2016/garifullin/: formatter.cpp  formatter.h  main.cpp
students/2016/geller/: main.cpp  translator_impl.cpp  translator_impl.h
students/2016/golovanov/: Makefile  printer.cpp
students/2016/gorbunov/: Makefile  bytecode_interpreter.cpp  interpreter_code_impl.cpp  main.cpp  pretty_print.cpp  translate_to_bytecode.cpp  translator_context.cpp  (+1 more)
students/2016/vlasov/: CMakeLists.txt  CodeImpl.cpp  CodeImpl.h  Context.h  Makefile  Stack.h  TranslatorImpl.cpp  ast_to_code.cpp  ast_to_code.h  main.cpp  test.cpp  translator_visitor.cpp  translator_visitor.h
tests/: common.py  perf.py  priority.mvm  run.py  task1.py  task3.py  task4.py  var.mvm
tests/additional/: 3function.mvm  casts.mvm  closure.mvm  complex2.expect  complex2.mvm  fib_closure.mvm  function-cast.mvm
tests/astprint/: dummyTest.expected  run.py
tests/mark4/: ackermann_closure_lite.mvm  ackermann_lite.mvm  fib_closure_lite.expect  fib_closure_lite.mvm  fib_lite.mvm
tests/optional/: function_native.mvm
tests/perf/: graph_plot.mvm  lissajous.mvm  newton.mvm  plot.mvm  prime.mvm  randomart.mvm
trunk/: Makefile  README.txt  common.mk  main.cpp
trunk/include/: Makefile  ast.h  ast_printer.cpp  main.cpp  mathvm.h  visitors.h
trunk/tests/: run.py
trunk/vm/: ast.cpp  jit.cpp  main.cpp  mathvm.cpp  parser.cpp  parser.h  scanner.cpp  scanner.h  translator.cpp  utils.cpp
vm/: ast.cpp  jit.cpp  jit.h  mathvm.cpp  parser.cpp  parser.h  scanner.cpp  scanner.h  translator.cpp  utils.cpp
wiki/: Intro.wiki  MVMLanguage.wiki  PageName.wiki
(+3146 files in other folders)
